Experiments/K8S/init.kube.25.hardway.14.public/POST-INIT-KUBE/NGINX.INGRESS.1/nginx-ingress.demo.2/02-nginx-deploy-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-blue
  namespace: test-ingress-2
  labels:
    app: nginx-blue
spec:
  selector:
    matchLabels:
      app: nginx-blue
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: nginx-blue
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: docker.io/nginx:1.19
        name: nginx-blue2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue
  namespace: test-ingress-2
spec:
  selector:
    app: nginx-blue
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 80
  type: NodePort
